Update code and data files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 
 .ipynb_checkpoints/Math_168_project_models-checkpoint.ipynb
+Model Draft 8.2.ipynb
+Scratch_work.txt
+Model Draft 5.ipynb
+Math_168_my_scratch_work.ipynb
+Covid Data original.xlsx
+County_Cumulative_Cases.xlsx
+.ipynb_checkpoints/AndrewsModel-checkpoint.ipynb
+.ipynb_checkpoints/Math_168_my_scratch_work-checkpoint.ipynb
+.ipynb_checkpoints/Model 11-checkpoint.ipynb
+.ipynb_checkpoints/Model Draft 5-checkpoint.ipynb
+.ipynb_checkpoints/Model Draft 7.1-checkpoint.ipynb
+.ipynb_checkpoints/Model Draft 8.2-checkpoint.ipynb
+.ipynb_checkpoints/Model Draft 9 (Toy Simulation) -checkpoint.ipynb
