--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ County_Cumulative_Cases.xlsx
 .ipynb_checkpoints/Model Draft 7.1-checkpoint.ipynb
 .ipynb_checkpoints/Model Draft 8.2-checkpoint.ipynb
 .ipynb_checkpoints/Model Draft 9 (Toy Simulation) -checkpoint.ipynb
+.DS_Store
